--- a/cambridge/bza/list_template.html
+++ b/cambridge/bza/list_template.html
@@ -1,3 +1,3 @@
 {% for req in reqs %}
- <li><a href="/{{req['Application Number']}}">{{req['Application Number']}}</a></li>
+ <li><a href="/{{req['Application Number']}}">{{req['Application Number']}}</a> ({{req['relief']}})</li>
 {% endfor %}
